<resources>
    <string name="app_name">Anuzo</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_an_account">Create an account</string>
    <string name="name">Name</string>
    <string name="login_with_existing">Login with an existing account</string>
    <string name="login_different">Login with a different method</string>
    <string name="register_different">Register with a different method</string>

    <string name="go_fragment_title">go</string>
    <string name="come_fragment_title">come</string>
    <string name="friends_fragment_title">friends</string>
    <string name="settings_fragment_title">settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
